<resources>
    <string name="app_name">SubastaUes</string>
    <string name="btn_registrarse">Registrarse</string>
    <string name="title_crear_cuenta">Crear Cuenta</string>
    <string name="subtitle_unete">Únete a la comunidad de subastas</string>
    <string name="text_ya_tienes_cuenta">¿Ya tienes cuenta? Inicia sesión</string>
    <string name="btn_iniciar_sesion">Iniciar Sesión</string>
    <string name="title_subasta_ues">Subasta UES</string>
    <string name="subtitle_plataforma">Plataforma de Subastas Universitarias</string>
    <string name="text_no_tienes_cuenta">¿No tienes cuenta? Regístrate aquí</string>
    <string name="error_correo_requerido">El correo es requerido</string>
    <string name="error_correo_valido">Ingrese un correo válido</string>
    <string name="error_password_requerida">La contraseña es requerida</string>
    <string name="error_password_min_length">La contraseña debe tener al menos 6 caracteres</string>
    <string name="error_nombre_requerido">El nombre es requerido</string>
    <string name="error_confirm_password_requerida">Debe confirmar su contraseña</string>
    <string name="error_passwords_no_coinciden">Las contraseñas no coinciden</string>
    <string name="hint_nombre">Nombre Completo</string>
    <string name="hint_correo">Correo Electrónico</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_confirm_password">Confirmar Contraseña</string>
    <string name="error_correo_registrado">Este correo ya está registrado</string>
    <string name="msg_usuario_ya_existe">El usuario ya existe</string>
    <string name="error_login_post_registro">Error al iniciar sesión tras el registro</string>
    <string name="error_credenciales_incorrectas">Credenciales incorrectas</string>
    <string name="welcome_message">¡Bienvenido, %s!</string>
    <string name="msg_sesion_cerrada">Sesión cerrada correctamente</string>
    <string name="msg_coordenadas_obteniendo">Coordenadas: Obteniendo ubicación...</string>
    <string name="msg_direccion_obteniendo">Dirección: Obteniendo dirección...</string>
    <string name="msg_permisos_denegados">Permisos de ubicación denegados.</string>
    <string name="msg_error_ubicacion">Error de ubicación: %s</string>
    <string name="title_eliminar_articulo">Eliminar artículo</string>
    <string name="msg_confirmar_eliminacion">¿Estás seguro que deseas eliminar \"%s\"?</string>
    <string name="btn_eliminar">Eliminar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="msg_articulo_eliminado">Artículo eliminado</string>
    <string name="msg_editar_formato">Editar: %s</string>
    <string name="text_sin_articulos">No tienes artículos publicados</string>
</resources>
